Update ACSL Note 3, Update Schedule Page

--- a/_posts/2021-01-26-Schedule.md
+++ b/_posts/2021-01-26-Schedule.md
@@ -9,7 +9,12 @@ tags: Page
 
 ## Timeline and Important Events 📅
 
-<div class="info">
+<div class="notification">
+<h4>USACO US Open</h4>
+<p>2021 Apr 2 - 2021 Apr 5</p>
+</div>
+
+<div class="notification">
 <h4>ACSL Round 3</h4>
 <p>2021 Jan 29 - 2021 Apr 10</p>
 </div>
