--- a/_posts/acsl-note/2021-03-11-ACSL-Round3.md
+++ b/_posts/acsl-note/2021-03-11-ACSL-Round3.md
@@ -5,11 +5,6 @@ tags: ACSL
 time: 2020
 Author: Mark
 ---
-
-<div class="error">
-这个页面尚未完工
-</div>
-
 ## 1. 布尔代数 Boolean Algebra
 
 在上一轮中，我们在 Bit String Flickering 中已经接触过二进制字符串的操作并了解了 AND,OR,XOR,NOT 这些基本的逻辑运算符。这次我们不会对包含很多位的二进制字符串做操作，而是对单个布尔值做逻辑运算操作。
@@ -24,8 +19,9 @@ Author: Mark
 | $\bar{A}$    | NOT $A$     |
 
 <p class="info">
-    在一些情境下，我们回省略两个布尔变量之间的 $*$ 号，例如直接将 $A * B$ 写为 $AB$
+    在一些情境下，我们会省略两个布尔变量之间的 $*$ 号，例如直接将 $A * B$ 写为 $AB$
 </p>
+
 
 
 
@@ -155,6 +151,49 @@ $$
 
 ###  1.4 练习
 
+#### 1.4.1 Intermediate
+
+
+**题目**
+<div class="simple-card" onClick="window.location.href='https://pan.baidu.com/s/1PIvX905CfixNnBELb8BqBQ'">
+⚠如果下面的文档无法显示，点击这里下载文件，提取码：gwcs
+</div>
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21208796&authkey=AJEy7cgmmkfPU4M&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+**答案**
+<div class="simple-card" onClick="window.location.href='https://pan.baidu.com/s/1_zrcbgtRd8dSC8FL5nnv4A'">
+⚠如果下面的文档无法显示，点击这里下载文件，提取码：gwcs
+</div>
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21208795&authkey=AGKKpY6TMcN7EeQ&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+#### 1.4.2 Senior
+
+**题目**
+
+<div class="simple-card" onClick="window.location.href='https://pan.baidu.com/s/1yI-GaKoEDsQMQuqCgleFQA'">
+⚠如果下面的文档无法显示，点击这里下载文件，提取码：gwcs
+</div>
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21208793&authkey=AP-geGwGTXr_FZ8&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+**答案**
+
+<div class="simple-card" onClick="window.location.href='https://pan.baidu.com/s/1wpdoZAwuM0yGmOuh1b4h4Q '">
+⚠如果下面的文档无法显示，点击这里下载文件，提取码：gwcs
+</div>
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21208794&authkey=AHXoh48anax4X3Y&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
 ## 2 数据结构 Data Structure
 
 对一个程序来说，算法和数据结构必不可少。ACSL中考察的数据结构主要有以下几种：
@@ -272,3 +311,194 @@ $$
 > * Preorder 描述：A,B,C,D,E
 > * Postorder 描述：C,D,B,E,A
 
+对一个平衡树可以做 Insert, Delete 和 Search 的操作，也可以通过这些操作将它排列为平衡树。
+
+### 2.4 优先队列 Priority Queue
+
+#### 2.4.1 优先队列特性
+
+优先队列和二分查找树有一定程度上的相似，但是只能从 PQ 中 search 或 delete 最小的值，类似 BST 中的 Root。优先队列通常使用二分最小堆 (Binary Min Heap) 实现，二分最小堆使用一个**类似**二分搜索树的结构，同时使这个树保持：
+1. 每个 node 的 children 的值一定比它自己的值小 （如果有 children)，但是 Children 之间的大小关系没有限制
+2. 整个树没有 holes，也就是说除了最底层以外的其他地方都要排满，最底层从左到右排满，中间没有空隙
+
+Priority Queue 可以进行 push, pop 的操作。
+
+<img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210319105526.jpg" alt="image5" style="zoom: 40%; display: block; margin: 0 auto;" />
+
+#### 2.4.2 优先队列表达
+
+和二分查找树类似，优先队列也可以写成一个线性的列表形式，并且通过列表的索引来确定节点在二分最小堆中的位置。
+
+
+
+### 2.5 练习
+
+#### 2.5.1 Intermediate
+
+**题目**
+
+<div class="simple-card" onClick="window.location.href='https://pan.baidu.com/s/1VM__tW6QJfs4QZ6ouZESWA'">
+⚠如果下面的文档无法显示，点击这里下载文件，提取码：gwcs
+</div>
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21208790&authkey=AOaeIrEA6hDkPYQ&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+**答案**
+
+<div class="simple-card" onClick="window.location.href='https://pan.baidu.com/s/1xR2I3kqVhKgz1XBIAypvcw'">
+⚠如果下面的文档无法显示，点击这里下载文件，提取码：gwcs
+</div>
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21208792&authkey=ABu77g6grrdrKM0&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+#### 2.5.2 Senior
+
+**问题**
+
+<div class="simple-card" onClick="window.location.href='https://pan.baidu.com/s/1wx9k7wKHDPZDS8a21bC7gg'">
+⚠如果下面的文档无法显示，点击这里下载文件，提取码：gwcs
+</div>
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21208789&authkey=AJKB_TfiLEmW8OI&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+**答案**
+
+<div class="simple-card" onClick="window.location.href='https://pan.baidu.com/s/1gc3VAg2N9MQgOiI8XLgNjg'">
+⚠如果下面的文档无法显示，点击这里下载文件，提取码：gwcs
+</div>
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21208791&authkey=AM-s63bzUKraeFc&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+## 3 正则表达式与有限状态机 RegEx and FSA
+
+### 3.1 介绍
+
+FSA (Finite State Automaton，有限状态机) 是一种表示模型状态的计算模型，通常以有向图的形式表达。有向图中的每个节点是模型的一种可能状态，两个状态之间的有向边表示模型从一个状态变化为另一个状态的变化。
+
+正则表达式是一种用来描述**文字模式匹配规则**的语言。这种语言让我们可以使用线性的文字描述一个用于匹配字符串的有限状态机。[RegEx - Wikipedia](https://en.wikipedia.org/wiki/Regular_expression)
+
+### 3.2 正则表达式
+
+#### 3.2.1 正则表达式语法
+
+正则表达式是一个字符串，其中有一些特定的符号（`{`, `}`, `|`, `^`, `[`, `]`, `+`, `*`, `.` 等）具有特殊含义。下面我会举例子说明每个符号的含义
+
+| 符号 | 含义             | RegEx 例子  | 能够被RegEx匹配到的字符串例子                         |
+| ---- | ---------------- | ----------- | ----------------------------------------------------- |
+| `|`  | 或               | `mark|Mark` | "mark", "Mark"                                        |
+| `*`  | 出现 0 或多次    | `gr*eat`    | "geat", "great", "grreat", ...., "grr....rreat", etc. |
+| `+`  | 出现 1 或多次    | `ab+c`      | "abc", "abbc", "abb...bc", etc.                       |
+| `.`  | 代表任意字符     | `m.rk`      | "mark", "mbrk", "m[rk", etc.                          |
+| `[]` | 代表字符范围     | `m[a-d]rk`  | "mark", "mbrk", "mcrk", "mdrk"                        |
+| `^`  | 否定（取反）     | `m[a-d^]rk` | "merk", "mfrk", etc.                                  |
+| `()` | 一个子正则表达式 | `m(a*|b)rk` | "maaaark", "mbrk", "mrk", "mark", etc.                |
+| `λ`  | 空字符串         |             |                                                       |
+
+通过组合这些符号，我们可以制定出非常复杂的匹配规则。
+
+> \*  实际上正则表达式还有很多强大的符号，例如 `\d` 表示任意数字等，不过这些与具体的正则表达式实现有关，并且也不在ACSL考察范围内，具体使用可以查询自己用的语言的 regex 文档。
+
+#### 3.2.2 正则表达式化简
+
+在上面描述符号的时候，可能你已经发现有一些情况下我们可以化简正则表达式，通过合并/消除冗余的部分，我们可以提高正则表达式的匹配性能和可读性。
+
+下面会介绍一些正则表达式的化简规则与恒等式
+
+| 规则                                                         | 解释                                                         |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+| `(a*)*`  $\leftrightarrow$ `a*`                              | 0 到多次出现（0到多次出现 a） $\rightarrow$ 0 到 多次出现 a  |
+| `aa*` $\leftrightarrow$ `a*a` $\leftrightarrow$ `a+`         | a(), a(a), a(aa), a(aaa), ... $\leftrightarrow$ ()a, (a)a, (aa)a, (aaa)a, ... |
+| `a+|λ`  $\leftrightarrow$  `a*`                              | 空字符串或者a出现1或多次 $\leftrightarrow$ a 出现0或多次     |
+| `a(b|c)` $\leftrightarrow$ `ab|ac`                           | a一定出现，接着是 b 或 c $\leftrightarrow$ ab 或 ac          |
+| `(a|b)*`$\leftrightarrow$`(a*|b*)*` $\leftrightarrow$ `(a*b*)*` | a, b 交替出现零或多次，不限顺序                              |
+
+这里安利一个非常好用的网站，可以检测正则表达式的匹配结果 [RegEx 101](https://regex101.com/)
+
+### 3.3 有限状态机 Finite State Automaton
+
+#### 3.3.1 有限状态机的性质
+
+有限状态机有以下几个性质
+
+1. 有限数量的状态
+2. 有状态转移规则
+3. 只有一个初始状态
+4. 有一个或多个结束状态
+
+#### 3.3.2 有限状态机的表达
+
+<img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210319120420.jpg" alt="5d5176f9ccd9020a72c20e70e046256" style="zoom: 25%; display: block; margin: 0 auto;" />
+
+我们使用一个有向图来表示一个 FSA，空心圆（节点）代表一个状态，节点之间的连线代表状态之间的转移，最后的同心圆表示结束状态。
+
+### 3.4 RegEx 与 FSA 互相转化
+
+RegEx的初始状态是空字符串 - 没有字符串被匹配到，每个 Regex 字符被翻译为状态之间的转移过程，如果匹配过程最后到达了结束状态，说明这个字符串可以被 RegEx 所描述的模式匹配到。
+
+每次遇到 `|` 时，FSA会在当前状态下产生两个可能的状态转移（分叉）。
+
+> 例1
+>
+> 假设我们想将这样一个 RegEx 转化为 FSA
+>
+> ```
+> ad*(bc*g|f)e
+> ```
+>
+> 结果大概是这样的：
+>
+> <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210319142039.jpg" alt="db9b64985b3f647a210834beaed4521" style="zoom:33%; display: block; margin: 0 auto;" />
+
+### 3.5 练习
+
+#### 3.5.1 RegEx
+
+**题目**
+
+<div class="simple-card" onClick="window.location.href='https://pan.baidu.com/s/1FkYMXwwvbnu0iNJjavwiLw'">
+⚠如果下面的文档无法显示，点击这里下载文件，提取码：gwcs
+</div>
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21208786&authkey=AIivmnWtsFSnAF4&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+**答案**
+
+<div class="simple-card" onClick="window.location.href='https://pan.baidu.com/s/1ovR9HYbNbokPSWP6Fc-tcQ'">
+⚠如果下面的文档无法显示，点击这里下载文件，提取码：gwcs
+</div>
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21208785&authkey=AD0aLQoZyIcocxQ&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+#### 3.5.2 FSA
+
+**问题**
+
+<div class="simple-card" onClick="window.location.href='https://pan.baidu.com/s/1De9hYtmfsYNs6ZZyu8YUuw'">
+⚠如果下面的文档无法显示，点击这里下载文件，提取码：gwcs
+</div>
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21208788&authkey=ACsfhIjOh7Za7MQ&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+**答案**
+
+<div class="simple-card" onClick="window.location.href='https://pan.baidu.com/s/1iVilLpz8R0miRvICEsiUvg'">
+⚠如果下面的文档无法显示，点击这里下载文件，提取码：gwcs
+</div>
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21208784&authkey=AJZK3SmsnIj0JbA&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
