Update Style, Upload Picture, Update Notes, Update Schedule

--- a/_posts/2021-01-26-About-Us.md
+++ b/_posts/2021-01-26-About-Us.md
@@ -7,7 +7,7 @@ tags: Page
 
 <div style="clear:right"></div>
 
-<img src="{{ site.baseurl }}/assets/AboutUs_1.svg" height="35%" width="35%" style="float:left; margin: 10px"/>
+<img src="{{ site.baseurl }}/assets/2021Members.png" style="border-radius: 10px"/>
 
 我们是广外 CS 社，我们希望为所有对计算机科学感兴趣的人建立一个共同的社区。在这个社区中，我们分享自己的知识，互相帮助，互相学习。
 
@@ -33,3 +33,13 @@ tags: Page
 感谢 2017 - 2019 届的学长与学姐。本网站许多备赛材料来源于在学长学姐总结的资料基础上进行汇总，改编，修正。 
 
 感谢 2019 - 2020 届的所有计算机科学方向学生，USACO 解析汇总中的解析都来源于他们的日常备赛打卡。
+
+## **History Images**
+
+<p>黑照之墙 （逃</p>
+
+<div class="image-horizontal-box">
+<img src="{{ site.baseurl }}/assets/2020Members.jpg" style="margin: 10px;"/>
+<img src="{{ site.baseurl }}/assets/2019Members.jpg" style="margin: 10px;"/>
+<img src="{{ site.baseurl }}/assets/2019CS2Final.jpg" style="margin: 10px;"/>
+</div>
