--- a/_posts/notes/cs188/2021-02-28-CS188-Chapter3.md
+++ b/_posts/notes/cs188/2021-02-28-CS188-Chapter3.md
@@ -5,7 +5,14 @@ Author: Mark
 tags: Notes CS188
 ---
 
-
+<div class="error">
+    <h3>
+        这个页面还没完工 ：）
+    </h3>
+    <p>
+        这个页面还没完成，后面会有后续更新
+    </p>
+</div>
 
 <div class="info">
     <h3>
@@ -55,7 +62,7 @@ def breadthFirstSearch(initialState, getSuccessor, getValidActions):
     """
     :param initialState: The Initial State of problem (sometimes the 'current state')
     :param getSuccessor: The State Transition Function that return the successors given the current state and action
-    :param getValidActions: A function taht takes current state and return a list of valid actions under current state
+    :param getValidActions: A function that takes current state and return a list of valid actions under current state
     """
     fringe = stack()
     exploredStates = set()
@@ -90,209 +97,108 @@ def breadthFirstSearch(initialState, getSuccessor, getValidActions):
 
 The DFS algorithm will **First expand the Deepest node in the State space**
 
-Depth First Search Algorithm need **Much Less Space** comparing to BFS, but it is not such a great searching algorithm since it does not fulfill the requirement of **Optimal**. In other words, the DFS will not return the optimal solution first.
+Depth First Search Algorithm need **Much Less Space** to search all the nodes in a specific depth comparing to BFS, but it is not a great searching algorithm since it is not **Optimal**. In other words, the DFS will <u>not</u> return the optimal solution first.
 
 In the DFS, the Fringe is a **Queue**, which applies the FIFO policy.
 
 ```python 
-def depthFirstSearch(problem):
+def depthFirstSearch(initialState, getSuccessor, getValidActions):
     """
-    Search the deepest nodes in the search tree first.
-
-    Your search algorithm needs to return a list of actions that reaches the
-    goal. Make sure to implement a graph search algorithm.
-
-    To get started, you might want to try some of these simple commands to
-    understand the search problem that is being passed in:
+    :param initialState: The Initial State of problem (sometimes the 'current state')
+    :param getSuccessor: The State Transition Function that return the successors given the current state and action
+    :param getValidActions: A function that takes current state and return a list of valid actions under current state
     """
-
-    # print("Start:", problem.getStartState())
-    # print("Is the start a goal?", problem.isGoalState(problem.getStartState()))
-    # print("Start's successors:", problem.getSuccessors(problem.getStartState()))
-
-    "*** YOUR CODE HERE ***"
-    # problem.getStartState() -> StartState
-    # problem.isGoalState(State) -> boolean (True or False)
-    # problem.getSuccessors(State) -> [(str(StartState), str('#num' + 'StartState -> 
-    # Successor's State')), ...]
-
-    ExploredNodes = set()
-    FringeNodes = list()
-
-    InitialState = problem.getStartState()
-    FringeNodes.append((InitialState, []))
-
-    while len(FringeNodes) != 0:
-        NewNodeData = FringeNodes.pop()
-        NewState = NewNodeData[0]
-        NewPath = NewNodeData[1]
-
-        if problem.isGoalState(NewState): return NewPath
-
-        # If the node has been explored
-        if NewState in ExploredNodes: continue
+    fringe = queue()    # The only difference between BFS and DFS
+    exploredStates = set()
+    
+    # Add the Initial State into the Fringe before Searching Actually Start.
+    fringe.push(initialState)
+    while len(fringe) > 0:
+		currState = fringe.pop()
+        if currState in exploredStates: continue
+        else: exploredState.add(currState)
+            
+        # Do Something Here
         
-        ExploredNodes.add(NewState)
-        Successors = problem.getSuccessors(NewState)
-
-        for Successor in Successors:
-            action = Successor[1]
-            SuccessorState = Successor[0]
-
-            ActionSequence = NewPath[:]
-            ActionSequence.append(action)
-            FringeNodes.append((SuccessorState, ActionSequence))
+        for action in getValidActions(currState):
+            # Add Successor States into the fringe
+            successor = getSuccessor(currState, action)
+            if successor not in exploredStates: fringe.push(successor)
 ```
+
+#### 3.2.1 Deep Limited Search
+
+
 
 ### 3.3 UCS Uniform Cost Search
 
-Both BFS and DFS has a problem that they does not care the **actual cost** of the action sequence it returns. Though the BFS DOES return the shrotest path to reach the goal state, it ignore the weight on each path. In fact, the shortest path usually is not the path with lowest cost.
-The UCS, however, does concern about the cost of its action sequence. It do so by **First Expand the Lowest Cost Node among all nodes in the Fringe Sequence**
+There is a common problem in BFS and DFS: They **don't care the ACTUAL COST of action sequence** to the goal state. Though BFS will return the Shortest action sequence to goal state, the shortest action sequence may not be the action sequence with lowest cost, like the example below shows:
 
-The strategy used by the UCS is quite like the strategy used in the MST (最小生成树)
+>  <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210319224716.jpg" alt="6e5f63b38286cc81fc07f61886fabb9" style="zoom:33%; display: block; margin: 0 auto" />
+>
+> The number inside each grid is the **cost** to go through that grid, $S$ is the initial state and $G$ is the goal state. In this case, the shortest action sequence $A$ has a Much Higher cost comparing to the min-cost action sequence $A^*$.
 
-In UCS, the Fringe is a **Priority Queue**, where the priority of items are the cost from initial state to the current state.
+To solve this problem, we use the **UCS** to search through the state space, which will ALWAYS explore the state with minimal cumulative cost. To implement this feature, the fringe of UCS is a priority queue, where the cumulative cost is the weight to sort priority queue.
+
+This stratagy is somehow similar to the stratagy used by Min Span Tree.
 
 ```python
-def uniformCostSearch(problem):
-    """Search the node of least total cost first."""
-    "*** YOUR CODE HERE ***"
+def uniformCostSearch(initialState, getSuccessor, getValidActions, getActionCost):
+    """
+    :param initialState: The Initial State of problem (sometimes the 'current state')
+    :param getSuccessor: The State Transition Function that return the successors given the current state and action
+    :param getValidActions: A function that takes current state and return a list of valid actions under current state
+    :param getActionCost: A function that will return cost of action given action and current state
+    """
+    fringe = []    # The only difference between BFS and DFS
+    exploredStates = set()
     
-    import heapq
+    # Add the Initial State into the Fringe before Searching Actually Start.
+    # Instead of storing state directly in the fringe, we will use a tuple to store state, where the 
+    # 0th param of tuple is cumulative cost
+    # 1th param of tuple is the state
     
-    ExploredNodes = set()
-    Fringe = list()
-
-    InitialState = problem.getStartState()
-    heapq.heappush(Fringe, (0.0, 0, InitialState, []))
-
-    SerialNum = 1
-    while len(Fringe) != 0:
-        NowNodeData = heapq.heappop(Fringe)
-        NowNodeCost = NowNodeData[0]
-        NowState = NowNodeData[2]
-        NowPath = NowNodeData[3]
-
-        if NowState in ExploredNodes: continue
-
-        if problem.isGoalState(NowState):return NowPath
+    heapq.heappush(fringe, (0, initialState))	# The initial cost is 0
+    while len(fringe) > 0:
+		cost, currState = heapq.heappop(fringe)
+        if currState in exploredStates: continue
+        else: exploredState.add(currState)
+            
+        # Do Something Here
         
-        ExploredNodes.add(NowState)
-        Successors = problem.getSuccessors(NowState)
-
-        for Successor in Successors:
-            NextState = Successor[0]
-            Action = Successor[1]
-            NextCost = Successor[2]
-
-            ActionSequence = NowPath[:]
-            ActionSequence.append(Action)
-
-            if not checkInList(NowState, Fringe):
-                heapq.heappush(Fringe, (NowNodeCost + NextCost, SerialNum, NextState, ActionSequence))
-            elif Fringe[checkInList(NowState, Fringe)][0] > (NowNodeCost + NextCost):
-                Fringe[checkInList(NowState, Fringe)] = (NowNodeCost + NextCost, SerialNum, NextState, ActionSequence)
-                heapq.heapify(Fringe)
-            SerialNum += 1
+        for action in getValidActions(currState):
+            # Add Successor States into the fringe
+            successor = getSuccessor(currState, action)
+            if successor not in exploredStates:
+                deltaCost = getActionCost(currrState, action)
+                heapq.heappush((cost + deltaCost, successor))
 ```
 
-In the UCS, we need to use the Priority Queue, there are two modulus in the Python that can perform the priority queue: `PriorityQueue` and `heapq`
+In Python, the priority queue is implemented by internal library `heapq`.
 
-### 3.4 A\* Search
+### 3.4 Note: Tree Search and Graph Search
 
-**A\* Search** is a kind of **Informed Search**, which gain some more knowledge about the question. Unlike the UCS method, which only focus on the cost from initial state to the current state, A\* search also concern the approximate future cost of the action sequence.
+Tree Search and Graph Search are two types of searching algorithms. Tree search is like a tree in graph theory - ther is *no loop* insied the state transition space. Therefore, any explored state node will NEVER be explored again.
 
-**Admissive and Consistency** are two ways to evaluate whether a Heuristic Function is good or not. The A\* search is optimal only if the Heuristic Function is both Admissive and Consistency.
+Graph Search, on the other hand, does not record the explored nodes in the state space. Everytime a Graph Search algorithm expand a node, all of its successor states will be added into the fringe. The cycle inside the graph is **redundant part** of a graph, which exists whever there is more than one way to get from one state to another.
 
-Some common Heuristic Functions:
+### 3.5 Informed Search
 
->**Manhattan Distance**
->Manhattan Distance s the sum of vertical distance and the horizontal distance between goal state and current state.
+Greedy search is a form of **informed search**, that is, information other than the definition of search problem is used to find the goal state. The informed search can find solutions more efficiently than an uninformed strategy.
 
-```python
-def ManhattenDistance(NowPosition, TargetPosition):
-    Nowx, Nowy = NowPosition[0], NowPosition[1]
-    Targetx, Targety = TargetPosition[0], TargetPosition[1]
-    return (abs(Targetx - Nowx)+abs(Targety - Nowy))
-```
+Among many types of informed search, the **greedy search** is one of the most general approach.
 
->**Euclid Distance**
->Euclid Distance is the linear distance between the current state and the goal state.
+Each node is evaluated using an **evaluation function** $f(n)$. The evaluation function $f(n)$'s value is considered as a **cost estimate**. In Greedy Search, the node in fringe with *lowest* evaluation will be expanded first. For most of the evaluation function, there is a part of **heuristic function** (denoted as $h(n)$) that helps to estimate the cost from current node to the goal state.
+$$
+h(x) = \text{The estimated cost of the cheapest path from state node } n \text{ to the Goal State}
+$$
+A heuristic function is **non-negative, problem specific** function and there is only one constraint: if $n$ is a goal state, then $h(n) = 0$.
 
-```python
-import math
-def EuclidDistance(NowPosition, TargetPosition):
-    x, y = NowPosition
-    dx, dy = TargetPosition
-    return math.sqrt((dx - x)**2+(dy - y)**2)
-```
+> Note, the 
 
-The **Heuristic Function** is the function that will 'predict' the distance between given state and the goal state.
-Notice that the distance is only be *predicted*, some poor Heuristic Function will not reduce the expanded nodes' number.
+#### 3.5.1 Greedy Search
 
-In A* Search, the Fringe is also a **Priority Queue**, the priority is the sum of cost from initial state to the current state and the value of Heuristic Function.
-
-The code is shown below:
-
-```python
-def aStarSearch(problem, heuristic=nullHeuristic):
-    """Search the node that has the lowest combined cost and heuristic first."""
-    "*** YOUR CODE HERE ***"
-    import heapq
-
-    ExploredNodes = set()
-    Fringe = list()
-
-    InitialState = problem.getStartState()
-    InitialHeuristic = heuristic(InitialState, problem)
-
-    heapq.heappush(Fringe, (0.0+InitialHeuristic, 0.0, 0, InitialState, []))       # (c(S)+h(s), c(s), seqNum, State, Path)
-
-    seqNum = 1
-
-    while len(Fringe) != 0:
-        NowNode = heapq.heappop(Fringe)
-        EstimateCost = NowNode[0]       # c(s)+h(s)  -> float()
-        ActualCost = NowNode[1]         # c(s)   -> float()
-        NowState = NowNode[3]           # State
-        ActionSequence = NowNode[4]     # Path -> list()
-
-        if problem.isGoalState(NowState): return ActionSequence
-        if NowState in ExploredNodes: continue
-        ExploredNodes.add(NowState)
-
-        Successors = problem.getSuccessors(NowState)
-        for Successor in Successors:
-            NextState = Successor[0]
-            NextAction = Successor[1]
-            NextCost = Successor[2]
-
-            NextActionSequence = ActionSequence[:]
-            NextActionSequence.append(NextAction)
-            NextHeuristic = heuristic(NextState, problem)
-
-            NextCost += ActualCost
-            NextEstimate = NextCost + NextHeuristic
-
-            check = AstarCheck(Fringe, NextState)
-            if check and Fringe[check][0] > NextEstimate:
-                Fringe[check] = (NextEstimate, NextCost, seqNum, NextState, NextActionSequence)
-                heapq.heapify(Fringe)
-            else:
-                heapq.heappush(Fringe, (NextEstimate, NextCost, seqNum, NextState, NextActionSequence))
-            seqNum += 1
-```
-
-Notice that a **A\* Search** will be optimistic when the Heuristic function is both admissive and consistent. It should be notice that there's a vast variety of functions can be selected as the Heuristic function (i.e. `return 0`), but only a good heuristic function is not trivial and can help up reduce the expanded nodes in the state space.
-
-### 3.5 Greedy Search
-
-Greedy search is one kind of application of greedy algorithm in the search problem.
-Sometime it will take too much time for the algorithm to find a **optimal solution action sequence** in the huge state space. However, we don't need necessarily optimal solution in most situations. In this situation, we can use a *suboptimal* solution instead.
-
-Greedy Search is a way to find the best solution in a local area and doing such an option repeatedly.
-
-The code of Greedy Search does not has a fixed structure like that of UCS, BFS etc. So the code won't be shown below.
+Greedy Search evaluate the nodes *only using* the heuristic function $h(x)$. That is, the evaluation function $f(n)$ is equal to the heuristic function $h(x)$.
 
 ### \*3.6 Prove the Optimality of A\* Search
 
