--- a/_posts/2021-01-26-Schedule.md
+++ b/_posts/2021-01-26-Schedule.md
@@ -9,6 +9,14 @@ tags: Page
 
 ## Timeline and Important Events 📅
 
+<div class="error">
+    <h4>Google Code Jam</h4>
+    <p>
+        Qualification Round, Mar 26 2021, 21:00 - Mar 28 2021, 03:00<br/>
+        <a href="https://codingcompetitions.withgoogle.com/codejam">点击前往比赛官网注册比赛</a>
+    </p>
+</div>
+
 <div class="notification">
 <h4>USACO US Open</h4>
 <p>2021 Apr 2 - 2021 Apr 5</p>
@@ -17,6 +25,18 @@ tags: Page
 <div class="notification">
 <h4>ACSL Round 3</h4>
 <p>2021 Jan 29 - 2021 Apr 10</p>
+</div>
+
+<div class="info">
+    <h4>Google Code Jam</h4>
+    <p>
+        <ul>
+            <li>Round 1A, Apr 10 2021, 09:00 - Apr 10 2021, 11:30</li>
+            <li>Round 1B, Apr 26 2021, 00:00 - Apr 26 2021, 02:30</li>
+            <li>Round 1C, May 1 2021, 17:00 - May 1 2021, 19:30</li>
+            <li>Round 2, May 15 2021, 22:00 - May 16 2021, 00:30</li>
+        </ul>
+    </p>
 </div>
 
 <div class="info">
