Update Page width, Update Main Page Background, Update Stylesheet, Fix hljs not defined error

--- a/_posts/notes/cs188/2021-02-24-CS188-Home.md
+++ b/_posts/notes/cs188/2021-02-24-CS188-Home.md
@@ -5,7 +5,7 @@ Author: Mark
 tags: Page
 ---
 
-<hr style="clear:right"/>
+<div style="clear:right"/>
 <img src="{{ site.baseurl }}/assets/cs188_logo.png" style="float: left; height: 40%; width: 40%; margin: 0px 16px 8px 0px; border-radius: 10px"/>
 
 这里是 2019 - 2020 学年 CS2: Artificial Intelligence 的课程笔记汇总首页。这门课程是基于 UC Berkeley CS188: Artificial Intelligence 的大纲和 Project 开展的。点击这里可以看到这门课的 Project 列表和 UCB 教授上课用的 PPT。
