Update Copyright, Extract 'report error' and 'comment' module, Remove TOC for some pages

--- a/_posts/2021-01-26-Schedule.md
+++ b/_posts/2021-01-26-Schedule.md
@@ -3,6 +3,7 @@ layout: page
 title: Schedule
 categories: secondary-pages
 tags: Page
+useTOC: false
 ---
 <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
@@ -43,8 +44,6 @@ tags: Page
 <h4>ACSL Round 4</h4>
 <p>2021 Mar 5 - 2021 May 16</p>
 </div>
-
----
 
 ## Meet TAs!
 
