--- a/_posts/usaco-analysis/2021-01-26-USACO.md
+++ b/_posts/usaco-analysis/2021-01-26-USACO.md
@@ -3,6 +3,7 @@ layout: page
 title: USACO Solutions
 categories: tertiary-pages
 tags: Page
+useTOC: false
 ---
 
 <div class="info">
@@ -18,7 +19,7 @@ tags: Page
 
 ### **2021**
 {% assign list = site.tags["USACO-analysis"] | where: 'time', 2021%}
-{% assign dates = "Jan" | split: ", " %}
+{% assign dates = "Jan, Feb, Open" | split: ", " %}
 
 {% for date in dates %}
   <h4>{{date}}</h4>
