--- a/_posts/notes/acsl/2021-01-26-ACSL.md
+++ b/_posts/notes/acsl/2021-01-26-ACSL.md
@@ -3,6 +3,7 @@ layout: page
 title: America Computer Science League (ACSL)
 categories: tertiary-pages
 tags: Page
+useTOC: false
 ---
 <div class="info">
     <h3>⚠ 2021年编程题变化</h3>
