--- a/_posts/2021-01-26-About-Us.md
+++ b/_posts/2021-01-26-About-Us.md
@@ -38,7 +38,9 @@ tags: Page
 <p>黑照之墙 （逃</p>
 
 <div class="image-horizontal-box">
-<img src="{{ site.baseurl }}/assets/2020Members.jpg" style="margin: 10px;"/>
 <img src="{{ site.baseurl }}/assets/2019Members.jpg" style="margin: 10px;"/>
-<img src="{{ site.baseurl }}/assets/2019CS2Final.jpg" style="margin: 10px;"/>
+<img src="{{ site.baseurl }}/assets/2020Members.jpg" style="margin: 10px;"/>
+<img src="{{ site.baseurl }}/assets/2020AlgoCamp.jpg" style="margin: 10px;"/>
+<img src="{{ site.baseurl }}/assets/2019AlgoCamp1.jpg" style="margin: 10px;"/>
+<img src="{{ site.baseurl }}/assets/2019AlgoCamp2.jpg" style="margin: 10px;"/>
 </div>
