--- a/404.md
+++ b/404.md
@@ -14,7 +14,7 @@ title: 404 Error
     <img src="{{ site.baseurl }}/assets/home.svg" 
         height="50px" 
         style="margin: 10px; cursor:pointer;"
-        onclick="window.location.href='{{ site.baseurl }}'"
+        onclick="window.location.href='{{ site.baseurl }}/'"
     />
     <p>回到主页</p>
 </div>
