Update Search Page Style

--- a/_posts/2021-04-12-Search.md
+++ b/_posts/2021-04-12-Search.md
@@ -11,7 +11,7 @@ useTOC: false
 
 <div id="search-container">
 <input type="text" id="search-input" placeholder="Type anything to start Searching ...">
-<a style="float:right;" href="{{ site.baseurl }}/secondary-pages/2021/01/26/All-Posts.html">想看旧版页面汇总？</a>
+<a style="float:right; font-size: 1.2rem;" href="{{ site.baseurl }}/secondary-pages/2021/01/26/All-Posts.html">想看旧版页面汇总？</a>
 <ul class="search-result-box" id="results-container" style="padding: 0 1.26rem 0 1.26rem;"></ul>
 </div>
 
