add debounce, loading animation, search result animation

--- a/_posts/2021-04-12-Search.md
+++ b/_posts/2021-04-12-Search.md
@@ -11,12 +11,13 @@ useTOC: false
 
 <div id="search-container">
 <input type="text" id="search-input" placeholder="Type anything to start Searching ...">
-<a style="float:right; font-size: 1.2rem;" href="{{ site.baseurl }}/secondary-pages/2021/01/26/All-Posts.html">想看旧版页面汇总？</a>
+<a style="float:right; font-size: 0.9rem; color: #999999; margin-top: 0.4rem;" href="{{ site.baseurl }}/secondary-pages/2021/01/26/All-Posts.html">想看旧版页面汇总？</a>
 <ul class="search-result-box" id="results-container" style="padding: 0 1.26rem 0 1.26rem;"></ul>
 </div>
 
 <!-- Script pointing to search-script.js -->
 <script src="{{ site.baseurl }}/js/jekyll-search.js" type="text/javascript"></script>
+<script src="{{ site.baseurl }}/js/search-style-control.js" type="text/javascript"></script>
 
 <!-- Configuration -->
 <script>
@@ -24,6 +25,8 @@ SimpleJekyllSearch({
   searchInput: document.getElementById('search-input'),
   resultsContainer: document.getElementById('results-container'),
   json: '/search.json',
-  limit: 30
+  limit: 30,
+  debounceTime: 125,
+  success: addAnimationDelay
 })
 </script>
