Update ACSL 4 Draft, Google Analytics Experiment

--- a/_posts/notes/acsl/2021-01-26-ACSL.md
+++ b/_posts/notes/acsl/2021-01-26-ACSL.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: America Computer Science League (ACSL)
+title: ACSL 讲义
 categories: tertiary-pages
 tags: Page
 useTOC: false
@@ -35,7 +35,7 @@ useTOC: false
             Regular Expression
         </p>
     </div>
-    <div class="lite-card">
+    <div class="lite-card" onClick="window.location.href='{{ site.baseurl }}/2021/04/13/ACSL-Round4.html'">
         <h3>ACSL Round 4</h3>
         <p>
             Assembly Language<br/>
