--- a/404.md
+++ b/404.md
@@ -10,19 +10,17 @@ title: 404 Error
 你好像来到了奇怪的地方……
 
 <div class="card-box">
-<div class="card">
+<div class="card" onclick="window.location.href='{{ site.baseurl }}/'">
     <img src="{{ site.baseurl }}/assets/home.svg" 
         height="50px" 
         style="margin: 10px; cursor:pointer;"
-        onclick="window.location.href='{{ site.baseurl }}/'"
     />
     <p>回到主页</p>
 </div>
-<div class="card">
+<div class="card" onclick="window.history.back();">
     <img src="{{ site.baseurl }}/assets/back.svg"
         height="50px"
         style="margin: 10px; cursor:pointer;"
-        onclick="window.history.back();"
     />
     <p>回到上一页</p>
 </div>
