--- a/_posts/notes/acsl/2021-04-13-ACSL-Round4.md
+++ b/_posts/notes/acsl/2021-04-13-ACSL-Round4.md
@@ -164,7 +164,31 @@ $$
 
 #### Intermediate
 
+**题目**
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21214817&authkey=AHSRxlB8g7fwkEk&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+**答案**
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21214818&authkey=ANJNDjmkbIqs3-o&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
 #### Senior
+
+**题目**
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21214815&authkey=AOhzfzl4GiSrjOQ&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+**答案**
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21214816&authkey=ADDnGQmuO493_pc&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
 
 ## 2 汇编语言 Assembly Language
 
@@ -237,12 +261,96 @@ LOC部分引⽤⼀个LABEL或者⼀个immediate data，如常数 `321`。
 
 ### 2.4 练习
 
-#### Intermediate
+**题目**
 
-#### Senior
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21214824&authkey=APdKqTdDCH7HvjA&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+**答案**
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21214825&authkey=ADuFfsFvhpRxmLs&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
 
 ## 3. 数字电路 Digital Electronics
 
+### 3.1 简介
+
+在之前的 ACSL 场次中，我们已经学习了 逻辑运算符 和 Boolean Algebra。这个专题使用逻辑电路实现特定的 Boolean Algebra 表达式并要求判断电路的输出状态。
+
+一个电路由多个“元件”构成，每个原件执行一个简单的逻辑 - `AND`, `OR`, `NOT`, `NOR`, `NAND` 。通过组合这些原件的输入输出，我们可以使用它们表达布尔代数式。
+
+### 3.2 数字电路介绍
+
+| Name   | Symbol                                                       | Boolean Expression           | Truth Table                                                  |
+| ------ | ------------------------------------------------------------ | ---------------------------- | ------------------------------------------------------------ |
+| BUFFER | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413202010.png" alt="File:Buffer-gate-en.svg" style="width: 50%" /> | $out = A$                    | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413202743.png" alt="image-20210413202743274" style="zoom:50%;" /> |
+| NOT    | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413202704.png" alt="File:Not-gate-en.svg" style="width: 50%;" /> | $out = \bar{A}$              | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413202759.png" alt="image-20210413202759229" style="zoom:50%;" /> |
+| AND    | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413202815.png" alt="File:And-gate.png" style="width: 50%;" /> | $out = A \wedge B$           | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413202847.png" alt="image-20210413202847560" style="zoom:50%;" /> |
+| NAND   | <img src="http://www.categories.acsl.org/wiki/images/thumb/5/58/Nand-gate-en.svg/500px-Nand-gate-en.svg.png" alt="File:Nand-gate-en.svg" style="width:50%;" /> | $out = \overline{A\wedge B}$ | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203258.png" alt="image-20210413203258518" style="zoom:50%;" /> |
+| OR     | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203349.png" alt="File:Or-gate-en.svg" style="width:50%;" /> | $out = A\vee B$              | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203426.png" alt="image-20210413203426284" style="zoom:50%;" /> |
+| NOR    | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203449.png" alt="File:Nor-gate-en.svg" style="width:50%;" /> | $out = \overline{A\vee B}$   | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203517.png" alt="image-20210413203517904" style="zoom:50%;" /> |
+| XOR    | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203544.png" alt="File:Xor-gate-en.svg" style="width:50%;" /> | $out = A\oplus B$            | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203659.png" alt="image-20210413203659687" style="zoom:50%;" /> |
+| XNOR   | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203603.png" alt="File:Xnor-gate-en.svg" style="width:50%;" /> | $out = \overline{A\oplus B}$ | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203717.png" alt="image-20210413203717925" style="zoom:50%;" /> |
+
+### 3.3 例题
+
+**第一题：**
+
+How many ordered-4-tuples (A, B, C, D) make the following circuit TRUE?
+
+![File:Circuit-sample2.svg](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203947.png)
+
+**解答：**
+
+第一步： 将图片翻译为 Boolean Expression
+
+第二步： 将 Boolean Expression 化简（用上一场的知识）
+
+第三步： 列表枚举（和 Boolean Expression那个专题一样的操作）
+
+![image-20210413204253506](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413204253.png)
+
+
+### 3.4 练习
+
+#### 3.4.1 Intermediate
+
+**题目**
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21214821&authkey=AAeuBpz1GqrPM6c&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+**答案**
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21214823&authkey=ABpaPCM5Yzhgxf0&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+#### 3.4.2 Senior
+
+**题目**
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21214819&authkey=ADy33NIPVesHC-g&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+**答案**
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21214820&authkey=AOzo28D0GUxHjaQ&em=2" width="100%" height="288" frameborder="0" scrolling="no">
+    The browser you are using does not support iframe.
+</iframe>
+
+
+## 4. 讲义下载
+
+<a href="https://pan.baidu.com/s/1uhB0fitcVFwAvU_XTjjjWg">
+<button class="main-button">
+点我下载 ACSL4.zip，提取码 gwcs
+</button>
+</a>
 
 ---
 这个版本的 ACSL 讲义由 Rita Tan, 马润铎 的历史版本改编而来
